--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 *.mp4
+Segundo/Programación de servicios y procesos/003-Programación de comunicaciones en red/001-Comunicación entre aplicaciones/101-Ejercicios/.env
+Segundo/Programación de servicios y procesos/003-Programación de comunicaciones en red/002-Roles cliente y servidor/101-Ejercicios/imap_config.php
