--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *.mp4
 Segundo/Programación de servicios y procesos/003-Programación de comunicaciones en red/001-Comunicación entre aplicaciones/101-Ejercicios/.env
 Segundo/Programación de servicios y procesos/003-Programación de comunicaciones en red/002-Roles cliente y servidor/101-Ejercicios/imap_config.php
+/Segundo/Proyecto Intermodular II/009-Proyectos segundo trimestre/003-Entrenamiento IA/.venv
