--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ Segundo/Programación de servicios y procesos/003-Programación de comunicacione
 /Segundo/Proyecto Intermodular II/009-Proyectos segundo trimestre/003-Entrenamiento IA/.venv
 Primero/Sistemas informáticos/003-Gestión de la información/005-Realización y restauración de copias de seguridad/101-Ejercicios/config_mysql_backup.json
 Primero/Sistemas informáticos/003-Gestión de la información/006-Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y chequeo. Cifrado/101-Ejercicios/config.json
+/Segundo/Proyecto Intermodular II/009-Proyectos segundo trimestre/005-entrenar chatbot a partir de pdf/qwen25-05b-jvc
+/Segundo/Proyecto Intermodular II/009-Proyectos segundo trimestre/006-scrapeador web y entrenamiento/venv
+/Segundo/Proyecto Intermodular II/009-Proyectos segundo trimestre/005-entrenar chatbot a partir de pdf/101-Ejercicios
+/Segundo/Proyecto Intermodular II/009-Proyectos segundo trimestre/006-scrapeador web y entrenamiento/101-Ejercicios
