--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ Primero/Sistemas informáticos/003-Gestión de la información/006-Herramientas 
 /Segundo/Desarrollo de interfaces/006-Documentación de aplicaciones/001-Ficheros de ayuda. Formatos/101-Ejercicios
 /Primero/Programación/012-Inteligencia Artificial/002-Entrenar IA personalizada/101-Ejercicios/venv
 /Segundo/Proyecto Intermodular II/009-Proyectos segundo trimestre/013-IA a partir de PDF/venv
+/Primero/Proyecto intermodular/203-Proyectos de tercer trimestre/004-entrenamiento IA/lora-cpu-lowram
+/Primero/Proyecto intermodular/203-Proyectos de tercer trimestre/004-entrenamiento IA/venv
+/Segundo/Proyecto Intermodular II/010-Proyectos tercer trimestre/001-Clasificador documental inteligente/pdf
